[package]
name = "arch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "riscv")'.dependencies]
riscv = { path = "riscv" }
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { path = "x86_64" }

[workspace]
members = [
	"riscv",
	"x86_64"
]
