[package]
name = "arch"
version = "0.1.0"
edition = "2018"

[dependencies]
cfg-if = "1.0.0"
match_cfg = "0.1"

[build-dependencies]
cfg_aliases = "0.1"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { path = "riscv" }
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { path = "x86_64" }

[workspace]
members = [
	"riscv",
	"x86_64"
]

