[package]
name = "x86_64"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.0"
bitflags = "1.0.4"
volatile = "0.4.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
logist = { path = "../../logist", default-features = false }
